--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign up/log in</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Sign Up</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     <div class="container">
@@ -12,25 +13,27 @@
         <h3>Create a new account<br><br></h3>
 
         <div class="data">
-            <form action="#">
+            <form action="{% url 'core:signup' %}" method="post">
+                {% csrf_token %}
+
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email" required><br><br>
+                    <input type="username" class="form-control" placeholder="Username" required name="username"><br><br>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="First Name" required><br><br>
+                    <input type="email" class="form-control" placeholder="Email" required name="email"><br><br>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Last Name" required><br><br>
+                    <input type="text" class="form-control" placeholder="First Name" required name="first_name"><br><br>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" oninput="this.value = this.value.replace(/\D/g, '')" placeholder="Student ID" required><br><br>
+                    <input type="text" class="form-control" placeholder="Last Name" required name="last_name"><br><br>
                 </div>
 
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required><br><br>
+                    <input type="password" class="form-control" placeholder="Password" required name="password"><br><br>
                 </div>
 
                 <div class="form-group">
@@ -38,10 +41,16 @@
                 </div>
 
                 <div class="sign-in">
-                    <span>already have an account?</span>
-                    <input type="button" class="signin-btn" value="sign in" onclick="window.location.href='login.html';">
+                    <span>Already have an account?</span>
+                    <input type="button" class="signin-btn" value="Sign in" onclick="window.location.href='../login';">
+                </div>
+                <div class="error">
+                    {% if error_message %}
+                    <p>{{error_message}}</p>
+                    {% endif %}
                 </div>
             </form>
         </div>
     </div>
 </body>
+</html>
