--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -7,7 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
-<body>
+<body class="login-page">
     <div class="container">
         <h1>
             Sign in
