--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -63,6 +63,9 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script>
+    const apiUrl = "{% url 'core:login' %}";  // Define the API endpoint URL
+    </script>
+    <script src="{% static 'script.js' %}"></script>
 </body>
 </html>
