--- a/core/templates/core/questions.html
+++ b/core/templates/core/questions.html
@@ -12,7 +12,7 @@
 
     <div class="quiz-container">
         <h2 id="question-number">Question 1</h2>
-        <p id="question-text">Loading...</p>
+        <h3 id="question-text">Loading...</h3>
 
         <div class="options">
             <button class="option" data-option="A">A. <span></span></button>
@@ -27,6 +27,11 @@
         <div class="progress-bar">
             <div class="progress-per" per="0%" style="max-width: 100%;"></div>
             <img src="{% static 'pictures/turkey.gif' %}" class="progress-icon" id="progress-icon">
+            <div class="progress-per" per="0%" style="max-width: 100%;"></div>
+
+             <!-- grass -->
+             
+             <img src="{% static 'pictures/grass.gif' %}" class="grass-overlay" id="progress-icon">
         </div>
      </div>
 
