--- a/core/static/quiz.css
+++ b/core/static/quiz.css
@@ -4,9 +4,9 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0fce1;
+    background-image: linear-gradient(100deg, #265e78, #ddffb3);
 }
-/* 让 container 保持居中 */
+/* keep the container centered */
 .container {
     position: relative;
     width: 100%;
@@ -16,42 +16,50 @@ html, body {
 }
 
 /* 让 Logo 的位置与屏幕高度有关 */
+/* the position of the logo dependent on the screen height */
 .quiz-logo {
-    width: 250px; /* 你可以调整 Logo 大小 */
+    width: 250px; 
     height: auto;
     position: absolute;
-    top: -20vh; /* 让 Logo 处于屏幕高度的 10% 处 */
+    top: -20vh; 
     left: 50%;
-    transform: translateX(-50%); /* 确保居中 */
+    transform: translateX(-50%); 
 }
 
 /* 让 START 按钮的位置与屏幕高度有关 */
+/* the position of the START button dependent on the screen height */
 .start-button {
-    background-image: linear-gradient(100deg, rgb(104, 170, 178), rgb(121, 176, 98), rgb(178, 204, 134));
-    color: white;
+    background-image: linear-gradient(100deg, rgb(63, 179, 192), rgb(107, 190, 71), rgb(173, 218, 97));
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-shadow: 
+       
+        -1px  3px 0 rgba(0, 0, 0, 0.243),
+         1px  3px 0 rgba(0, 0, 0, 0.236);
     font-size: 32px;
     padding: 10px 50px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     transition: 0.3s ease;
-    height: var(--button-height, 60px); /* 让按钮高度可调 */
+    height: var(--button-height, 60px); /* control the height */
     display: flex;
     justify-content: center;
     align-items: center;
 
+    box-shadow: 
+        -1px 1px 0 rgba(0, 0, 0, 0.243),  /* 左上阴影 */
+        1px 1px 0 rgba(0, 0, 0, 0.236),
+
+        3px 1px 0 rgba(0, 0, 0, 0.243),
+        -1px 3px 0 rgba(0, 0, 0, 0.243);  /* 左上阴影 */
+        
+
     position: absolute;
-    top: 20vh; /* 让按钮出现在屏幕高度的 70% 处 */
+    top: 20vh; /* 70%  */
     left: 50%;
-    transform: translateX(-50%); /* 确保居中 */
+    transform: translateX(-50%); 
 }
-
-/* 悬停效果 */
-.start-button:hover {
-    opacity: 0.8;
-    transform: translateX(-50%) scale(1.05); /* 确保悬停时仍居中 */
-}
-
 
 /* BACK */
 .back-button {
