--- a/core/static/questions.css
+++ b/core/static/questions.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     /* background-image: linear-gradient(280deg, #6ec2e8, #ddffb3); */
-    background-color: #c1dea1;
+    background-color: #d5dea1;
     height: 100vh;
     margin: 0;
     display: flex;
