--- a/core/static/questions.css
+++ b/core/static/questions.css
@@ -22,6 +22,9 @@ body {
 h2 {
     margin-bottom: 10px;
 }
+h3 {
+    text-align: left; 
+}
 .options {
     display: flex;
     flex-direction: column;
@@ -36,8 +39,9 @@ h2 {
     border-radius: 5px;
     cursor: pointer;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start !important;
     align-items: center;
+    text-align: left; 
 }
 .correct {
     background-color: #60c964 !important;
