--- a/core/static/result.css
+++ b/core/static/result.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: linear-gradient(100deg, #267857, #ddffb3);
+    background-color: #d5dea1;
     margin: 0;
 }
 .result-container {
@@ -16,15 +16,16 @@ body {
     border-radius: 15px;
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    color: rgb(255, 255, 255);
+    color: rgb(117, 106, 73);
     width: 300px;
+
 }
 .back-button {
     position: absolute;
     top: 20px;
     left: 20px;
     background-color: transparent;
-    color: rgb(255, 255, 255);
+    color: rgb(117, 106, 73);
     border: none;
     font-size: 18px;
     cursor: pointer;
