--- a/core/templates/core/result.html
+++ b/core/templates/core/result.html
@@ -17,10 +17,10 @@
 
     <div class="result-container">
         <h1>Quiz Results</h1>
-        <p>Correct Answers: <span id="correct">...</span></p>
-        <p>Wrong Answers: <span id="wrong">...</span></p>
-        <h3>Round Score: <span id="current-score">...</span></h3>
-        <h3>Total Score: <span id="total-score">...</span></h3>
+        <p><span id="correct">...</span></p>
+        <p><span id="wrong">...</span></p>
+        <h3><span id="current-score">...</span></h3>
+        <h3><span id="total-score">...</span></h3>
         <!-- try again -->
         <button class="retry" onclick="location.href='{% url 'core:quiz' %}'">Try Again</button><!---->
     </div>
