--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -52,7 +52,7 @@
                 
             </div>
             <!-- Action key -->
-            <a href="../quiz" class="action-button">
+            <a href="../ZQuiz/quiz.html" class="action-button">
                 <div class="button-icon">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </div>
