--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -14,14 +14,14 @@
             Sign in
         </h1>
         <h3>
-            Use your username<br><br>
+            Use your email<br><br>
         </h3>
         <div class="data">
             <form action="{% url 'core:login' %}" method="post">
                 {% csrf_token %}
                 
                 <div class="form-group">
-                    <input type="text" name="username" class="form-control" placeholder="Username" required><br><br>
+                    <input type="email" name="email" class="form-control" placeholder="Email" required><br><br>
                 </div>
 
                 <div class="form-group">
