--- a/core/templates/core/questions.html
+++ b/core/templates/core/questions.html
@@ -23,10 +23,10 @@
         <h3 id="question-text">Loading...</h3>
 
         <div class="options">
-            <button class="option" data-option="A"><span></span></button>
-            <button class="option" data-option="B"><span></span></button>
-            <button class="option" data-option="C"><span></span></button>
-            <button class="option" data-option="D"><span></span></button>
+            <button class="option" data-option="A">A. <span></span></button>
+            <button class="option" data-option="B">B. <span></span></button>
+            <button class="option" data-option="C">C. <span></span></button>
+            <button class="option" data-option="D">D. <span></span></button>
         </div>
     </div>
 
