--- a/core/templates/core/quiz.html
+++ b/core/templates/core/quiz.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- BACK -->
-    <button class="back-button" id="back">
+    <button class="back-button" id="back" onclick="location.href='{% url 'core:home' %}'">
         <i class="fa fa-sign-out"></i> BACK
     </button>
 
