--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <!--click avatar to enter the profile page-->
-            <a href="../profilepage/profile.html" class="avatar-link">
+            <a href="{% url 'core:profile' %}" class="avatar-link">
                 <div class="avatar-frame">
                     <img src="{% static 'pictures/fox.jpg' %}" alt="Avatar">
                 </div>
