change the website for all icons

--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navpage</title>
     <link rel="stylesheet" href="{% static 'navpage2.css' %}">
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -143,5 +143,6 @@
         </div>
 
     </div>
+    
     <script src="{% static 'navpage2.js' %}"></script>
 </body>
