--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -6,7 +6,7 @@
     <title>Welcome!</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">
-
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="login-page">
     <div class="container">
@@ -61,8 +61,6 @@
             </form>
         </div>
     </div>
-    
-    
     
     <script src="{% static 'script.js' %}"></script>
 </body>
