--- a/core/templates/core/questions.html
+++ b/core/templates/core/questions.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="{% static 'questions.css' %}">
-    <script defer src="{% static 'questions.js' %}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <form id="csrf-form" style="display: none;">
@@ -45,5 +45,7 @@
     <script>
         const questions = JSON.parse(`{{ questions_json|escapejs }}`);
     </script>
+
+    <script defer src="{% static 'questions.js' %}"></script>
 </body>
 </html>
