--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -6,6 +6,7 @@
     <title>Sign up</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="login-page">
     <div class="container">
@@ -63,6 +64,7 @@
             </div>
         </div>
     </div>
+    
     <script src="{% static 'script.js' %}"></script>
 </body>
 </html>
