--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -49,7 +49,7 @@
         <div class="info-section">
             <div class="info-row">
                 <label for="username">Username</label>
-                <input id="username" type="text" value="JohnDoe" disabled/>
+                <input id="username" type="text" value="Alice" disabled/>
                 <button class="edit-btn" onclick="toggleEdit('username', this)">
                     <i class="fa fa-pencil-square-o"></i>
                 </button>
