--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -18,7 +18,7 @@
   
     <div class="avatar-bg" style="background: linear-gradient(to bottom, rgba(0,0,0,0) 80%, rgb(255,255,255) 100%), url({% static 'pictures/leaves.jpg' %}) no-repeat center center; background-size: cover;">
         <div class="selected-avatar" onclick="openModal()">
-            <img id="current-avatar" src="{% static 'pictures/fox.jpg' %}" alt="current avatar" />
+            <img id="current-avatar" src="/media/avatars/fox.jpg" alt="current avatar" />
         </div>
         <p class="greeting">Hi, <span id="display-username"></span>!</p>
         <input type="file" id="avatar-upload" accept="image/*" onchange="uploadAvatar(event)" style="display:none"/>
@@ -31,9 +31,10 @@
                 <i class="fa fa-times"></i>
             </button>
             <div class="avatar-modal-avatar">
-                <img id="modal-avatar" src="{% static 'pictures/fox.jpg' %}" alt="Avatar">
+                <img id="modal-avatar" src="/media/avatars/fox.jpg" alt="Avatar">
             </div>
             <div class="avatar-modal-actions">
+                <input type="file" id="avatar-upload" accept="image/*" onchange="uploadAvatar(event)" style="display:none"/>
                 <button onclick="document.getElementById('avatar-upload').click()">Upload New Avatar</button>
             </div>
         </div>
