backend connected to frontend

--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <a href="../ZGreenTravel/travel.html" class="action-button">
+            <a href="{% url 'core:walkinggame' %}">Go to Walking Game</a>
                 <div class="button-icon">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </div>
