--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -29,7 +29,7 @@
                 </div>
             </a>
             <!-- leaderboard and score -->
-            <a href="../leaderboard/leaderboard.html" class="user-info-link">
+            <a href="{% url 'core:leaderboard' %}" class="user-info-link">
                 <div class="user-info-box">
                     <p>SCORE: <span id="user-score">loading...</span></p>
                     <p>RANK: <span id="user-rank">loading...</span></p><br>
