Update the recycling game backend

--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <a href="../ZRecyclingMaster/recycling.html" class="action-button">
+            <a href="{% url 'core:recycling' %}" class="action-button">
                 <div class="button-icon">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </div>
