Edit location search

--- a/core/templates/core/recycling.html
+++ b/core/templates/core/recycling.html
@@ -30,7 +30,7 @@
                 <div class="locations-grid">
                     <button class="location-btn" data-location="Amory Building" data-zipcode="EX4 4RJ" data-icon="fa-building">
                         <i class="fas fa-building"></i>
-                        <span>Amory Buliding</span>
+                        <span>Amory Building</span>
                     </button>
                     <button class="location-btn" data-location="Forum" data-zipcode="EX4 4PZ" data-icon="fa-university">
                         <i class="fas fa-university"></i>
