--- a/core/templates/core/navpage2.html
+++ b/core/templates/core/navpage2.html
@@ -25,7 +25,11 @@
             <!--click avatar to enter the profile page-->
             <a href="{% url 'core:profile' %}" class="avatar-link">
                 <div class="avatar-frame">
-                    <img src="{% static 'pictures/fox.jpg' %}" alt="Avatar">
+                    {% if user.profile.avatar_url %}
+                        <img src="/media/{{ user.profile.avatar_url }}" alt="Avatar">
+                    {% else %}
+                        <img src="{% static 'pictures/fox.jpg' %}" alt="Default Avatar">
+                    {% endif %}
                 </div>
             </a>
             <!-- leaderboard and score -->
