The default avatar issue

--- a/core/templates/core/leaderboard.html
+++ b/core/templates/core/leaderboard.html
@@ -24,7 +24,7 @@
             <!-- Second Place (Left) -->
             <div id="rank2" class="rank rank-2">
                 <div class="avatar-container">
-                    <img class="top-avatar" src="{% static 'pictures/bird.jpg' %}" alt="No.2">
+                    <img class="top-avatar" src="{% static 'pictures/fox.jpg' %}" alt="No.2">
                 </div>
                 <div class="rank-info">
                     <span class="rank-number">TOP 2</span>
@@ -35,7 +35,7 @@
             <!-- First Place (Center) -->
             <div id="rank1" class="rank rank-1">
                 <div class="avatar-container">
-                    <img class="top-avatar" src="{% static 'pictures/bird.jpg' %}" alt="No.1">
+                    <img class="top-avatar" src="{% static 'pictures/fox.jpg' %}" alt="No.1">
                 </div>
                 <div class="rank-info">
                     <span class="rank-number">TOP 1</span>
@@ -46,7 +46,7 @@
             <!-- Third Place (Right) -->
             <div id="rank3" class="rank rank-3">
                 <div class="avatar-container">
-                    <img class="top-avatar" src="{% static 'pictures/bird.jpg' %}" alt="No.3">
+                    <img class="top-avatar" src="{% static 'pictures/fox.jpg' %}" alt="No.3">
                 </div>
                 <div class="rank-info">
                     <span class="rank-number">TOP 3</span>
@@ -60,7 +60,7 @@
             <ul class="list" id="rankingList">
                 <li>
                     <span class="rank-number">-</span>
-                    <img src="{% static 'pictures/bird.jpg' %}" alt="player" class="avatar">
+                    <img src="{% static 'pictures/fox.jpg' %}" alt="player" class="avatar">
                     <span class="name">Loading...</span>
                     <span class="score">-</span>
                 </li>
