Add BACK button

--- a/core/templates/core/recycling.html
+++ b/core/templates/core/recycling.html
@@ -19,6 +19,9 @@
             <!-- Main Screen -->
             <div class="main-screen" id="mainScreen">
                 <div class="header">
+                    <a href="{% url 'core:home' %}" class="home-btn">
+                        <i class="fas fa-arrow-left"></i>
+                    </a>
                     <h1>Recycling Master</h1>
                     <p>Go to the designated recycling station, dispose of recyclable waste, and scan the QR code to earn points.</p>
                     <div class="points-display">
