--- a/core/static/walkinggame.css
+++ b/core/static/walkinggame.css
@@ -416,3 +416,32 @@ body {
 .leaflet-popup-tip {
     background-color: var(--primary-color);
 }
+
+
+
+.back-button {
+    position: absolute;
+    top: 10px;
+    right: 10px; 
+    z-index: 999;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: var(--shadow);
+}
+
+.back-button a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
