--- a/core/templates/core/walkinggame.html
+++ b/core/templates/core/walkinggame.html
@@ -14,6 +14,13 @@
 <body>
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
     <div class="container">
+    
+        <div class="back-button">
+            <a href="{% url 'core:home' %}">
+                <i class="fas fa-arrow-left"></i>
+            </a>
+        </div>
+
         <!-- Map container placed at top -->
         <div class="map-container">
             <div id="map"></div>
