--- a/core/static/navpage2.css
+++ b/core/static/navpage2.css
@@ -140,9 +140,12 @@ html, body{
     transition: opacity 0.3s ease-in-out;
 }
 .avatar-link img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    width: auto;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 /* disappear when zoom out (avatar) */
 .item.active .avatar-link {
