change passwords ui

--- a/core/templates/registration/password_change_done.html
+++ b/core/templates/registration/password_change_done.html
@@ -1,11 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Changed</title>
+    <link rel="stylesheet" href="{% static 'done.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-    <h2>Password Changed Successfully</h2>
-    <p>Your password has been updated.</p >
-    <button onclick="window.location.href='/login/'">Return to Login</button>
+    <div class="container">
+        <i class="fa fa-check-circle success-icon"></i>
+        <h2>Password Changed Successfully</h2>
+        <p>Your password has been updated. You can now use your new password to log in.</p>
+        <a href="{% url 'core:login' %}" class="button">
+            <i>Return to Login</i>
+        </a>
+    </div>
 </body>
 </html>
